# Writepal

./: .env.template  CMakeLists.txt  LICENSE
include/Bot/: Bot.h
include/Model/: User.h
include/Service/: GptService.h  HttpService.h
include/System/EventManager/: EventManager.hpp
include/System/EventManager/Events/: ArticleEvent.hpp  ClearDialogEvent.hpp  PromptEvent.hpp
src/: main.cpp
src/Bot/: Bot.cpp
src/Service/: GptService.cpp  HttpService.cpp
src/System/EventManager/: EventManager.cpp
